src/objects/Lead_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow a Lead in Chatter.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Leads</fullName>
                </value>
                <value>
                    <fullName>Only Leads with a certain Rating</fullName>
                </value>
                <value>
                    <fullName>Only Leads with a certain Status</fullName>
                </value>
                <value>
                    <fullName>Only Leads from a certain Lead Source</fullName>
                </value>
                <value>
                    <fullName>Only Leads for a certain Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>diz_currency__c</fullName>
        <description>test</description>
        <label>diz_currency__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <description>test</description>
        <inlineHelpText>etet</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>14</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_url2__c</fullName>
        <description>test</description>
        <inlineHelpText>tsts</inlineHelpText>
        <label>diz_url2__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>diz_urlXXX__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_urlXXX__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <label>Lead Swarm Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LSR-{0000}</displayFormat>
        <label>Lead Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>